[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab>=3.4.7,<4.0.0", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab_rise"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyterlab>=3.0.0,<4",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [
    "coverage",
    "hatch",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync"
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupyterlab_rise/labextension", "jupyterlab_rise/schemas", "jupyterlab_rise/static"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel]
artifacts = ["jupyterlab_rise/schemas", "jupyterlab_rise/static"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_rise/labextension" = "share/jupyter/labextensions/jupyterlab-rise"
"install.json" = "share/jupyter/labextensions/jupyterlab-rise/install.json"
"jupyter-config/server_config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nbconfig" = "etc/jupyter/jupyter_notebook_config.d"

[tool.hatch.build.hooks.version]
path = "jupyterlab_rise/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupyterlab_rise/labextension/static/style.js",
    "jupyterlab_rise/labextension/package.json",
]
skip-if-exists = ["jupyterlab_rise/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupyterlab_rise/labextension"

[tool.jupyter-releaser.options]
version-cmd = "python scripts/bump_version.py --force"

[tool.jupyter-releaser.hooks]
before-bump-version = [
    "python -m pip install jupyterlab~=3.1",
    "jlpm"
]
before-build-npm = [
    "python -m pip install jupyterlab~=3.1",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean"]

[tool.check-wheel-contents]
ignore = ["W002"]
